output/method_names/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestNameConflicts.java
public Bean193(@JsonProperty("val1") int value1, @JsonProperty("val2") int value2)
 int x()
public void testIssue193() throws Exception
